  * Not touching global namespace anymore: 'require' returns the library.
  * Moving all 'dub' C++ methods inside 'dub' namespace.
  * Replacing 'lubyk' dependency by 'lub'.
  * Functions marked as 'ignore' are no longer bound in sub-classes.
  * Installs with luarocks.
  * Removing 'lib_prefix' option and using 'no_prefix' argument instead.
  * Much improved documentation.

== 2.1.0

* Major enhancement
  * Added support for functions (not class methods).
  * Anonymous union support.
  * Added support for Callbacks from C++.
  * Added support for pseudo-attributes (get/set methods).
  * Added support for string_format and string_args to customize __tostring from @dub.
  * Added support for 'register' option in @dub.
  * Added support for custom destructor: 'destructor' option in @dub.
  * Added 'namespace' option (support for namespace constants and functions.
  * Added :deleted() on all class bindings to detect C++ deleted objects from Lua.
  * Optimized 'dub_issdata' when the only type resolution involves userdata.
  * Automatically transform operator= to "set" method.
  * Added support for @dub name: "xxx" in method.

* Minor enhancement
  * Should not add namespace to typedef of template in namespace.
  * Should check doxygen header versions.
  * Should create cast for unresolved templated parents.
  * Added 'ignore' setting for parser.
  * Ignoring 'struct' keyword in param (C++ name scoping rules apply).
  * Casting enum types to 'int' instead of double.
  * Added 'extra_headers' option to binder.
  * Fixed bug with unamed method parameters (Tim Mensch).
  * Fixed bug with void parameter (Tim Mensch).
  * Fixed bug where lua stack would grow during class registration (Tim Mensch).
  * Added 'attr_name_filter' to rename attributes.
  * Removed 'yaml' dependency and changed @dub options format.
  * Binding all classes now works inside a namespace.
  * Added support for custom bindings with default values.