@@ -1,0 +1,88 @@
+cmake_minimum_required(VERSION 2.8)
+# --------------------------------------------------------------
+#  {{lib.type}}
+# --------------------------------------------------------------
+set(MODULE_NAME {{lib.type}})
+set(target ${MODULE_NAME})
+
+# Where to install files
+set(INSTALL_PATH "${CMAKE_BINARY_DIR}/lib" CACHE STRING "Install directory path")
+# -------- PLAT
+
+set(LINK_LIBS {{ lub.join(def.libraries or {}, ' ') }})
+
+{% local platlibs = def.platlibs or {} %}
+if(UNIX)
+  if(APPLE)
+    set(PLAT "macosx")
+    set(LINK_FLAGS "-bundle -undefined dynamic_lookup -all_load")
+{% if platlibs.macosx then %}
+    set(LINK_LIBS {{ lub.join(platlibs.macosx, ' ') }})
+{% end %}
+  else(APPLE)
+    set(PLAT "linux")
+    set(LINK_FLAGS "-shared")
+{% if platlibs.linux then %}
+    set(LINK_LIBS {{ lub.join(platlibs.linux, ' ') }})
+{% end %}
+  endif(APPLE)
+else(UNIX)
+  if(WIN32)
+    set(PLAT "win32")
+{% if platlibs.win32 then %}
+    set(LINK_LIBS {{ lub.join(platlibs.win32, ' ') }})
+{% end %}
+  else(WIN32)
+    set(PLAT "unsupported")
+  endif(WIN32)
+endif(UNIX)
+
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -Wall -fPIC -O2")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -Wall -fPIC -O2")
+if (RELEASE)
+  add_definitions(-O2 -DNDEBUG)
+endif(RELEASE)
+
+# --------------------------------------------------------------
+#  module
+# --------------------------------------------------------------
+add_custom_target(${MODULE_NAME} true)
+
+{% if not def.pure_lua then %}
+# --------------------------------------------------------------
+#  {{lib.type}}.core
+# --------------------------------------------------------------
+set(core "${MODULE_NAME}_core")
+
+include_directories({{ lub.join(def.includes, ' ') }})
+
+file(GLOB CORE_SOURCES src/*.c src/bind/dub/*.cpp src/bind/*.cpp src/*.cpp
+  src/${PLAT}/*.cpp src/${PLAT}/*.mm)
+
+add_library(${core} MODULE ${CORE_SOURCES})
+if(LINK_LIBS)
+  target_link_libraries(${core} ${LINK_LIBS})
+endif(LINK_LIBS)
+set_target_properties(${core}
+  PROPERTIES OUTPUT_NAME core
+  LINK_FLAGS ${LINK_FLAGS}
+  PREFIX ""
+  SUFFIX ".so"
+)  
+
+add_dependencies(${MODULE_NAME} ${core})
+
+# --------------------------------------------------------------
+#  install                                     
+# --------------------------------------------------------------
+install(TARGETS ${core}
+  DESTINATION ${INSTALL_PATH}/${MODULE_NAME}
+)
+
+{% end %}
+# --------------------------------------------------------------
+#  install                                     
+# --------------------------------------------------------------
+install(DIRECTORY ${MODULE_NAME}
+  DESTINATION ${INSTALL_PATH}
+)
